--- a/trunk/configs/templates/JDCLOUD-RE-SP-01B.config
+++ b/trunk/configs/templates/JDCLOUD-RE-SP-01B.config
@@ -3,7 +3,7 @@ CONFIG_VENDOR=Ralink
 CONFIG_PRODUCT=MT7621
 
 ### Target ProductID (board select, max 12 symbols)
-CONFIG_FIRMWARE_PRODUCT_ID="RE-SP-01B"
+CONFIG_FIRMWARE_PRODUCT_ID="ZTE-E8820S"
 
 ### Linux kernel and toolchain
 CONFIG_FIRMWARE_INCLUDE_SFE=y
@@ -14,11 +14,11 @@ CONFIG_LINUXDIR=linux-4.4.x
 ### Linux kernel configuration
 ############################################################
 
-### Enable IPv6 support
-CONFIG_FIRMWARE_ENABLE_IPV6=y
-
 ### Enable USB support
 CONFIG_FIRMWARE_ENABLE_USB=y
+
+### Enable NTFS fs support via AVM ntfs driver instead of ntfs-3g.
+CONFIG_FIRMWARE_INCLUDE_ANTFS=y
 
 ### Enable FAT/FAT32 filesystem support. ~0.1MB
 CONFIG_FIRMWARE_ENABLE_FAT=y
@@ -27,10 +27,10 @@ CONFIG_FIRMWARE_ENABLE_FAT=y
 CONFIG_FIRMWARE_ENABLE_EXFAT=y
 
 ### Enable EXT2 filesystem support. ~0.1MB
-CONFIG_FIRMWARE_ENABLE_EXT2=n
+CONFIG_FIRMWARE_ENABLE_EXT2=y
 
 ### Enable EXT3 filesystem support. ~0.2MB
-CONFIG_FIRMWARE_ENABLE_EXT3=n
+CONFIG_FIRMWARE_ENABLE_EXT3=y
 
 ### Enable EXT4 (EXT3/2 too) filesystem support. ~0.4MB
 CONFIG_FIRMWARE_ENABLE_EXT4=y
@@ -45,16 +45,13 @@ CONFIG_FIRMWARE_ENABLE_FUSE=y
 CONFIG_FIRMWARE_ENABLE_SWAP=n
 
 ### Include UVC camera modules. ~0.2MB
-CONFIG_FIRMWARE_INCLUDE_UVC=n
+#CONFIG_FIRMWARE_INCLUDE_UVC=y
 
 ### Include USB-HID modules. ~0.2MB
-CONFIG_FIRMWARE_INCLUDE_HID=n
-
-### Include USB-Serial modules (e.g. pl2303). ~0.03MB
-CONFIG_FIRMWARE_INCLUDE_SERIAL=n
+#CONFIG_FIRMWARE_INCLUDE_HID=y
 
 ### Include USB-Audio modules ~0.46MB
-CONFIG_FIRMWARE_INCLUDE_AUDIO=n
+#CONFIG_FIRMWARE_INCLUDE_AUDIO=y
 
 ### Include XFRM (IPsec) modules & iptables extension ~ 0.2MB
 CONFIG_FIRMWARE_INCLUDE_XFRM=n
@@ -75,10 +72,10 @@ CONFIG_FIRMWARE_INCLUDE_IPSET=y
 CONFIG_FIRMWARE_INCLUDE_NFSD=n
 
 ### Include NFSv3 client. ~0.5MB
-CONFIG_FIRMWARE_INCLUDE_NFSC=y
+CONFIG_FIRMWARE_INCLUDE_NFSC=n
 
 ### Include CIFS (SMB) client. ~0.2MB
-CONFIG_FIRMWARE_INCLUDE_CIFS=n
+CONFIG_FIRMWARE_INCLUDE_CIFS=y
 
 ############################################################
 ### Userspace configuration
@@ -86,39 +83,39 @@ CONFIG_FIRMWARE_INCLUDE_CIFS=n
 
 ### Include WebUI international resources. Increased firmware size
 CONFIG_FIRMWARE_INCLUDE_LANG_CN=y
-#CONFIG_FIRMWARE_INCLUDE_LANG_BR=n
-#CONFIG_FIRMWARE_INCLUDE_LANG_CZ=n
-#CONFIG_FIRMWARE_INCLUDE_LANG_DA=n
-#CONFIG_FIRMWARE_INCLUDE_LANG_DE=n
-#CONFIG_FIRMWARE_INCLUDE_LANG_ES=n
-#CONFIG_FIRMWARE_INCLUDE_LANG_FI=n
-#CONFIG_FIRMWARE_INCLUDE_LANG_FR=n
-#CONFIG_FIRMWARE_INCLUDE_LANG_NO=n
-#CONFIG_FIRMWARE_INCLUDE_LANG_PL=n
-#CONFIG_FIRMWARE_INCLUDE_LANG_RU=n
-#CONFIG_FIRMWARE_INCLUDE_LANG_SV=n
+#CONFIG_FIRMWARE_INCLUDE_LANG_BR=y
+#CONFIG_FIRMWARE_INCLUDE_LANG_CZ=y
+#CONFIG_FIRMWARE_INCLUDE_LANG_DA=y
+#CONFIG_FIRMWARE_INCLUDE_LANG_DE=y
+#CONFIG_FIRMWARE_INCLUDE_LANG_ES=y
+#CONFIG_FIRMWARE_INCLUDE_LANG_FI=y
+#CONFIG_FIRMWARE_INCLUDE_LANG_FR=y
+#CONFIG_FIRMWARE_INCLUDE_LANG_NO=y
+#CONFIG_FIRMWARE_INCLUDE_LANG_PL=y
+#CONFIG_FIRMWARE_INCLUDE_LANG_RU=y
+#CONFIG_FIRMWARE_INCLUDE_LANG_SV=y
 #CONFIG_FIRMWARE_INCLUDE_LANG_UK=y
 
-### Include NTFS-3G FUSE driver (instead of Paragon "ufsd"). ~0.4MB
+ ### Include NTFS-3G FUSE driver (instead of Paragon "ufsd"). ~0.4MB
 CONFIG_FIRMWARE_INCLUDE_NTFS_3G=n
 
 ### Include LPR printer daemon. ~0.12MB
-CONFIG_FIRMWARE_INCLUDE_LPRD=y
+CONFIG_FIRMWARE_INCLUDE_LPRD=n
 
 ### Include USB-over-Ethernet printer daemon. ~0.05MB
 CONFIG_FIRMWARE_INCLUDE_U2EC=n
 
 ### Include "tcpdump" utility. ~0.6MB
-CONFIG_FIRMWARE_INCLUDE_TCPDUMP=y
+CONFIG_FIRMWARE_INCLUDE_TCPDUMP=n
 
 ### Include "hdparm" utility (allow set HDD spindown timeout and APM). ~0.1MB
 CONFIG_FIRMWARE_INCLUDE_HDPARM=n
 
 ### Include "parted" utility (allow make GPT partitions). ~0.3MB
-CONFIG_FIRMWARE_INCLUDE_PARTED=y
+CONFIG_FIRMWARE_INCLUDE_PARTED=n
 
 ### Include SMB3.6 (and WINS) server. ~1.5MB
-CONFIG_FIRMWARE_INCLUDE_SMBD=n
+CONFIG_FIRMWARE_INCLUDE_SMBD=Y
 
 ### Include WINS server only. ~0.4MB
 CONFIG_FIRMWARE_INCLUDE_WINS=n
@@ -127,7 +124,7 @@ CONFIG_FIRMWARE_INCLUDE_WINS=n
 CONFIG_FIRMWARE_INCLUDE_SMBD_SYSLOG=n
 
 ### Include FTP server. ~0.2MB
-CONFIG_FIRMWARE_INCLUDE_FTPD=y
+CONFIG_FIRMWARE_INCLUDE_FTPD=Y
 
 ### Include alternative L2TP control client RP-L2TP. ~0.1MB
 CONFIG_FIRMWARE_INCLUDE_RPL2TP=n
@@ -139,19 +136,19 @@ CONFIG_FIRMWARE_INCLUDE_EAP_PEAP=y
 CONFIG_FIRMWARE_INCLUDE_HTTPS=n
 
 ### Include sftp-server. openssl ~1.2MB, sftp-server ~0.06MB
-CONFIG_FIRMWARE_INCLUDE_SFTP=y
+CONFIG_FIRMWARE_INCLUDE_SFTP=n
 
 ### Include dropbear SSH. ~0.3MB
-CONFIG_FIRMWARE_INCLUDE_DROPBEAR=n
+CONFIG_FIRMWARE_INCLUDE_DROPBEAR=y
 
 ### Make the dropbear symmetrical ciphers and hashes faster. ~0.06MB
 CONFIG_FIRMWARE_INCLUDE_DROPBEAR_FAST_CODE=n
 
 ### Include OpenSSH instead of dropbear. openssl ~1.2MB, openssh ~1.0MB
-CONFIG_FIRMWARE_INCLUDE_OPENSSH=y
+CONFIG_FIRMWARE_INCLUDE_OPENSSH=n
 
 ### Include OpenVPN. IPv6 required. openssl ~1.2MB, openvpn ~0.4MB
-CONFIG_FIRMWARE_INCLUDE_OPENVPN=y
+CONFIG_FIRMWARE_INCLUDE_OPENVPN=n
 
 ### Include StrongSwan. XFRM modules ~0.2MB, strongswan ~0.7MB
 CONFIG_FIRMWARE_INCLUDE_SSWAN=n
@@ -160,10 +157,10 @@ CONFIG_FIRMWARE_INCLUDE_SSWAN=n
 CONFIG_FIRMWARE_INCLUDE_OPENSSL_EC=y
 
 ### Include "openssl" executable for generate certificates. ~0.4MB
-CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=y
+CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=n
 
 ### Include xUPNPd IPTV mediaserver. ~0.3MB
-CONFIG_FIRMWARE_INCLUDE_XUPNPD=y
+CONFIG_FIRMWARE_INCLUDE_XUPNPD=n
 
 ### Include Minidlna UPnP mediaserver. ~1.6MB
 CONFIG_FIRMWARE_INCLUDE_MINIDLNA=n
@@ -172,7 +169,7 @@ CONFIG_FIRMWARE_INCLUDE_MINIDLNA=n
 CONFIG_FIRMWARE_INCLUDE_FIREFLY=n
 
 ### Include ffmpeg 0.11.x instead of 0.6.x for Minidlna and Firefly. ~0.1MB
-CONFIG_FIRMWARE_INCLUDE_FFMPEG_NEW=y
+CONFIG_FIRMWARE_INCLUDE_FFMPEG_NEW=n
 
 ### Include Transmission torrent. openssl ~1.2MB, transmission ~1.5MB
 CONFIG_FIRMWARE_INCLUDE_TRANSMISSION=n
@@ -181,10 +178,10 @@ CONFIG_FIRMWARE_INCLUDE_TRANSMISSION=n
 CONFIG_FIRMWARE_INCLUDE_TRANSMISSION_WEB_CONTROL=n
 
 ### Include Aria2 download manager. openssl ~1.2MB, aria2 ~3.5MB
-CONFIG_FIRMWARE_INCLUDE_ARIA=y
+CONFIG_FIRMWARE_INCLUDE_ARIA=n
 
 ### Include Aria2 WEB control. ~0.7MB
-CONFIG_FIRMWARE_INCLUDE_ARIA_WEB_CONTROL=y
+CONFIG_FIRMWARE_INCLUDE_ARIA_WEB_CONTROL=n
 
 CONFIG_FIRMWARE_INCLUDE_CURL=y
 
@@ -199,22 +196,23 @@ CONFIG_FIRMWARE_INCLUDE_MINIEAP=n
 CONFIG_FIRMWARE_INCLUDE_NJIT_CLIENT=n
 
 CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_SERVER=n
-
 CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_CLIENT=n
-
 CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_CMD=n
 
 CONFIG_FIRMWARE_INCLUDE_VLMCSD=y
 
 CONFIG_FIRMWARE_INCLUDE_TTYD=y
 
+### Include msd_lite, replaces udpxy
+CONFIG_FIRMWARE_INCLUDE_MSD_LITE=y
+
 CONFIG_FIRMWARE_INCLUDE_LRZSZ=n
 
 CONFIG_FIRMWARE_INCLUDE_HTOP=y
 
-CONFIG_FIRMWARE_INCLUDE_NANO=y
+CONFIG_FIRMWARE_INCLUDE_NANO=n
 
-CONFIG_FIRMWARE_INCLUDE_IPERF3=y
+CONFIG_FIRMWARE_INCLUDE_IPERF3=n
 
 CONFIG_FIRMWARE_INCLUDE_DUMP1090=n
 
@@ -224,7 +222,7 @@ CONFIG_FIRMWARE_INCLUDE_MTR=y
 
 CONFIG_FIRMWARE_INCLUDE_SOCAT=y
 
-CONFIG_FIRMWARE_INCLUDE_SRELAY=y
+CONFIG_FIRMWARE_INCLUDE_SRELAY=n
 
 CONFIG_FIRMWARE_INCLUDE_MENTOHUST=n
 
@@ -232,4 +230,41 @@ CONFIG_FIRMWARE_INCLUDE_FRPC=n
 
 CONFIG_FIRMWARE_INCLUDE_FRPS=n
 
-CONFIG_FIRMWARE_INCLUDE_WIREGUARD=y
+### Include Shadowsocks
+CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS=y
+### Include xray  ~4.5M
+CONFIG_FIRMWARE_INCLUDE_XRAY=n
+### Include v2ray
+CONFIG_FIRMWARE_INCLUDE_V2RAY=n
+### Include sing-box
+CONFIG_FIRMWARE_INCLUDE_SINGBOX=n
+### Include trojan  ~1.2M
+CONFIG_FIRMWARE_INCLUDE_TROJAN=n
+### Include simple-obfs
+CONFIG_FIRMWARE_INCLUDE_SSOBFS=y
+### Include naiveproxy
+CONFIG_FIRMWARE_INCLUDE_NAIVEPROXY=n
+
+### Include adbyby plus+
+CONFIG_FIRMWARE_INCLUDE_ADBYBY=y
+
+### DNS Services
+CONFIG_FIRMWARE_INCLUDE_DNSFORWARDER=n
+CONFIG_FIRMWARE_INCLUDE_SMARTDNS=y
+CONFIG_FIRMWARE_INCLUDE_ADGUARDHOME=y
+
+### zerotier ~1.3M
+CONFIG_FIRMWARE_INCLUDE_ZEROTIER=y
+CONFIG_FIRMWARE_INCLUDE_ALIDDNS=n
+### ddnsto  ~0.5M
+CONFIG_FIRMWARE_INCLUDE_DDNSTO=n
+### ALDRIVER  ~3m
+CONFIG_FIRMWARE_INCLUDE_ALDRIVER=n
+CONFIG_FIRMWARE_INCLUDE_SQM=n
+### wireguard 10k
+CONFIG_FIRMWARE_INCLUDE_WIREGUARD=n
+
+### CPU Overclocking
+CONFIG_FIRMWARE_INCLUDE_OC=y
+### Clock Rate: 1000Mhz=0x312 1100Mhz=0x362 1120Mhz=0x372 1200Mhz=0x3B2
+CONFIG_FIRMWARE_MT7621_OC="0x362"
